--- a/JS_ES6/ITERACION_5_6/index.html
+++ b/JS_ES6/ITERACION_5_6/index.html
@@ -11,6 +11,6 @@
     <title>Document</title>
   </head>
   <body>
-    <input type="text" data-function="toFilterStreamers" class="input"/>
+    <input type="text" data-function="toFilterStreamers" class="inputClass"/>
   </body>
 </html>
